--- a/Index.html
+++ b/Index.html
@@ -205,7 +205,7 @@ noBtn.onclick = () => {
 
 yesBtn.onclick = () => {
   text.innerHTML =
-    "Gracias por hacerme la persona más feliz del universo, aunque sea por un día 💜";
+    "Jajajaja, bueno sé que esto nunca ocurrirá y que solo es un acto de fingir que mis sueños se cumplan. Si apretaste sí y por ende estás leyendo esto, gracias: estás cumpliendo mi fantasía al menos por hoy. Siempre me hacés la persona más feliz del universo. Te amo con mi vida y espero que hoy no te sientas sola ni que no te amen, porque sin importar el día, la fecha, con quién estés o qué haya pasado, siempre serás el amor de mi vida y te amaré hasta morir 💜";
   buttons.style.display = "none";
   createBigHearts();
 };
