--- a/Mi-mundo-abi.html
+++ b/Mi-mundo-abi.html
@@ -3,14 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Mi Universo Para Ti</title>
+<title>Mi Universo 3D</title>
 
 <style>
 body{
     margin:0;
     overflow:hidden;
+    background: radial-gradient(circle at 20% 20%, #2a0055, #001233, #000000);
     font-family: Arial, sans-serif;
-    background: radial-gradient(circle at 30% 30%, #2a0055, #000428, #000000);
+    color:white;
 }
 
 canvas{
@@ -19,71 +20,148 @@ canvas{
     left:0;
 }
 
-.carta{
-    position:absolute;
-    font-size:28px;
-    cursor:pointer;
-    transition: transform 0.4s;
-    animation: flotar 6s ease-in-out infinite alternate;
-}
-
-.carta:hover{
-    transform: scale(1.6);
-}
-
-@keyframes flotar{
-    from{ transform: translateY(-10px); }
-    to{ transform: translateY(10px); }
+.mensajeBox{
+    position:fixed;
+    bottom:30px;
+    left:50%;
+    transform:translateX(-50%);
+    background:rgba(255,255,255,0.1);
+    backdrop-filter:blur(10px);
+    padding:20px;
+    border-radius:15px;
+    max-width:70%;
+    text-align:center;
+    font-size:18px;
+    display:none;
 }
 </style>
 </head>
 
 <body>
 
-<canvas id="stars"></canvas>
+<canvas id="scene"></canvas>
+<div class="mensajeBox" id="mensajeBox"></div>
 
 <script>
-const canvas = document.getElementById("stars");
+const canvas = document.getElementById("scene");
 const ctx = canvas.getContext("2d");
-
 canvas.width = window.innerWidth;
 canvas.height = window.innerHeight;
 
-let stars = [];
-let angleX = 0;
 let angleY = 0;
+let angleX = 0;
 let mouseDown = false;
 let lastX, lastY;
 
+let cartas = [];
+let estrellas = [];
+
 for(let i=0;i<1000;i++){
-    stars.push({
+    estrellas.push({
         x:(Math.random()-0.5)*3000,
         y:(Math.random()-0.5)*3000,
         z:(Math.random()-0.5)*3000
     });
 }
 
-function drawStars(){
-    ctx.fillStyle="rgba(0,0,0,0.25)";
+const mensajes=[
+// (mismos 32 mensajes resumidos aquí por espacio)
+"Te amo sin esperar respuesta.",
+"Te amo en silencio y con paciencia.",
+"Me encanta tu noble sonrisa.",
+"Tus ojos parecen esmeraldas que me hechizan.",
+"Tu voz es mi canción favorita.",
+"Te amo incluso si no soy tu elección.",
+"Tu esencia ilumina mis días.",
+"Te amo sin presión.",
+"Tu risa es mi universo.",
+"Te amo aunque solo viva en mí.",
+"Tu cabello brilla como oro.",
+"Admiro tu fuerza interior.",
+"Te amo con calma infinita.",
+"Tu forma de ser me enamora.",
+"Te amo incluso en tus días grises.",
+"Tu piel parece porcelana delicada.",
+"Eres el sentimiento más puro.",
+"Te amo porque existes.",
+"No espero nada, solo amarte.",
+"Te amo con sinceridad absoluta.",
+"Cada gesto tuyo me cautiva.",
+"Te amo sin condiciones.",
+"Tu presencia cambia mi mundo.",
+"Te amo sin prisas.",
+"Eres mi pensamiento favorito.",
+"Te amo aunque sea en silencio.",
+"Tu mirada toca mi alma.",
+"Te amo con respeto.",
+"Eres inspiración constante.",
+"Te amo profundamente.",
+"Si amar es verte feliz, entonces te amo.",
+"Y aunque sea solo mío… este amor es real."
+];
+
+for(let i=0;i<35;i++){
+    cartas.push({
+        radio: 300 + Math.random()*300,
+        angulo: Math.random()*Math.PI*2,
+        velocidad: 0.002 + Math.random()*0.002,
+        altura: (Math.random()-0.5)*400,
+        mensaje: mensajes[Math.floor(Math.random()*mensajes.length)]
+    });
+}
+
+function proyectar(x,y,z){
+    let scale = 800/(800+z);
+    return {
+        x: x*scale + canvas.width/2,
+        y: y*scale + canvas.height/2,
+        scale: scale
+    }
+}
+
+function draw(){
+    ctx.fillStyle="rgba(0,0,0,0.3)";
     ctx.fillRect(0,0,canvas.width,canvas.height);
 
-    for(let star of stars){
-        star.z -= 2;
-        if(star.z < -1500) star.z = 1500;
+    angleY += 0.0005;
 
-        let scale = 600/(600+star.z);
-        let x = star.x*scale + canvas.width/2;
-        let y = star.y*scale + canvas.height/2;
-
-        ctx.fillStyle = "hsl(" + (star.z+1500)/5 + ",100%,70%)";
+    // Estrellas
+    for(let s of estrellas){
+        let scale = 600/(600+s.z);
+        let x = s.x*scale + canvas.width/2;
+        let y = s.y*scale + canvas.height/2;
+        ctx.fillStyle="white";
         ctx.fillRect(x,y,2,2);
     }
 
-    angleY += 0.0005;
-    requestAnimationFrame(drawStars);
+    // Cartas orbitando
+    for(let c of cartas){
+        c.angulo += c.velocidad;
+
+        let x = Math.cos(c.angulo)*c.radio;
+        let z = Math.sin(c.angulo)*c.radio;
+        let y = c.altura;
+
+        // Rotación global
+        let rotX = y*Math.cos(angleX)-z*Math.sin(angleX);
+        let rotZ = y*Math.sin(angleX)+z*Math.cos(angleX);
+        let rotY = x*Math.cos(angleY)-rotZ*Math.sin(angleY);
+        rotZ = x*Math.sin(angleY)+rotZ*Math.cos(angleY);
+
+        let p = proyectar(rotY, rotX, rotZ);
+
+        ctx.font = 30*p.scale + "px Arial";
+        ctx.fillText("💌", p.x, p.y);
+
+        c.screenX = p.x;
+        c.screenY = p.y;
+        c.size = 30*p.scale;
+    }
+
+    requestAnimationFrame(draw);
 }
 
-drawStars();
+draw();
 
 document.addEventListener("mousedown",e=>{
     mouseDown=true;
@@ -93,47 +171,25 @@ document.addEventListener("mousedown",e=>{
 document.addEventListener("mouseup",()=>mouseDown=false);
 document.addEventListener("mousemove",e=>{
     if(!mouseDown) return;
-    angleY+=(e.clientX-lastX)*0.003;
-    angleX+=(e.clientY-lastY)*0.003;
+    angleY+=(e.clientX-lastX)*0.005;
+    angleX+=(e.clientY-lastY)*0.005;
     lastX=e.clientX;
     lastY=e.clientY;
 });
 
-const mensajes=[
-"Me encanta tu noble sonrisa, es el mejor regalo que puedo recibir al verte.",
-"Me fascinan tus ojos que parecen esmeraldas que me hechizan profundamente.",
-"Cuando me miras siento que un ángel atraviesa mi alma.",
-"Tu piel de porcelana parece tan delicada que el mundo debería cuidarte.",
-"Tu cabello brilla como finas cuerdas de oro bajo cualquier luz.",
-"Tu voz es mi canción favorita incluso cuando me regañas.",
-"Me enamora cada cambio de carácter tuyo.",
-"Amo tu dulzura… aunque no siempre esté dirigida hacia mí.",
-"Te amo sin condiciones, incluso si nunca soy tu elección.",
-"Te amo en silencio, sin exigir nada.",
-"Te amo aunque solo sea un sentimiento que vive en mí.",
-"Tu presencia ilumina mis días más oscuros.",
-"Cada gesto tuyo se queda grabado en mi memoria.",
-"Tu risa es mi sonido favorito en el universo.",
-"Te amo con paciencia infinita.",
-"Te amo sin esperar que me ames igual.",
-"Si amar es desear tu felicidad antes que la mía, entonces te amo de verdad.",
-"Tu forma de caminar, de hablar, de existir… me cautiva.",
-"Admiro la fuerza que llevas dentro.",
-"Te amo incluso en tus días grises.",
-"Te amo por cada imperfección que te hace única.",
-"No eres un trofeo… eres el sueño que cuido en silencio.",
-"Si algún día te das cuenta de lo que siento, aquí estaré.",
-"Te amo desde la calma y la esperanza.",
-"Tu esencia es lo que más me enamora.",
-"Te amo porque contigo aprendí lo que significa amar.",
-"No importa cuánto tiempo pase, este sentimiento seguirá intacto.",
-"Te amo sin prisas, sin presión.",
-"Te amo en cada pensamiento que me roba una sonrisa.",
-"Eres el sentimiento más puro que he conocido.",
-"Te amo porque simplemente existes.",
-"Y aunque este amor sea solo mío… seguirá siendo real."
-];
+canvas.addEventListener("click",e=>{
+    for(let c of cartas){
+        let dx=e.clientX-c.screenX;
+        let dy=e.clientY-c.screenY;
+        if(Math.sqrt(dx*dx+dy*dy)<c.size){
+            const box=document.getElementById("mensajeBox");
+            box.innerText=c.mensaje;
+            box.style.display="block";
+            setTimeout(()=>box.style.display="none",5000);
+        }
+    }
+});
+</script>
 
-for(let i=0;i<35;i++){
-    let carta=document.createElement("div"
-  
+</body>
+</html>
