--- a/Index.html
+++ b/Index.html
@@ -2,254 +2,89 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Mi Princesa 💜</title>
-
-<!-- Fuente medieval -->
-<link href="https://fonts.googleapis.com/css2?family=Uncial+Antiqua&display=swap" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Mi Universo</title>
 
 <style>
-body {
-  margin: 0;
-  height: 100vh;
-  background: radial-gradient(circle, #2b1b12, #120a05);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: 'Uncial Antiqua', cursive;
-  overflow: hidden;
+body{
+    margin:0;
+    overflow:hidden;
+    background: radial-gradient(circle at 50% 40%, #3a0ca3, #240046, #000814);
+    font-family: Arial, sans-serif;
 }
 
-/* PANTALLA INICIAL */
-#intro {
-  position: fixed;
-  inset: 0;
-  background: radial-gradient(circle, #3a1f14, #0f0704);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  color: #f5d7a1;
-  z-index: 10;
+canvas{
+    position:fixed;
+    top:0;
+    left:0;
 }
 
-#intro h1 {
-  font-size: 38px;
-  margin-bottom: 30px;
-  text-shadow: 0 0 15px #000;
-}
-
-#startBtn {
-  font-size: 22px;
-  padding: 14px 30px;
-  border-radius: 40px;
-  border: none;
-  cursor: pointer;
-  background: #7a1c1c;
-  color: #f5d7a1;
-  font-family: inherit;
-  box-shadow: 0 0 15px #000;
-}
-
-/* CARTA */
-.card {
-  position: relative;
-  background: #7b1f1f;
-  border: 6px solid #3b0f0f;
-  border-radius: 20px;
-  padding: 35px;
-  width: 320px;
-  text-align: center;
-  color: #f5d7a1;
-  box-shadow: 0 0 30px #000;
-}
-
-.decor-text {
-  position: absolute;
-  background: #ffb6c1;
-  color: #4a0f2f;
-  padding: 6px 10px;
-  border-radius: 20px;
-  font-size: 10px;
-  animation: float 6s ease-in-out infinite;
-}
-
-@keyframes float {
-  0% { transform: translateY(0); }
-  50% { transform: translateY(-10px); }
-  100% { transform: translateY(0); }
-}
-
-.decor-text.top { top: 6px; left: 10px; right: 10px; }
-.decor-text.bottom { bottom: 6px; left: 10px; right: 10px; }
-.decor-text.left { left: 6px; top: 20px; writing-mode: vertical-rl; }
-.decor-text.right { right: 6px; top: 20px; writing-mode: vertical-rl; }
-
-.heart {
-  font-size: 60px;
-  color: #8f5bd9;
-  animation: pulse 1.5s infinite;
-}
-
-@keyframes pulse {
-  0% { transform: scale(1); }
-  50% { transform: scale(1.15); }
-  100% { transform: scale(1); }
-}
-
-.buttons {
-  margin-top: 20px;
-  display: flex;
-  justify-content: space-around;
-}
-
-button {
-  border: none;
-  border-radius: 30px;
-  padding: 12px 18px;
-  cursor: pointer;
-  font-family: inherit;
-  transition: 0.4s;
-}
-
-#yesBtn {
-  background: #3a8f4e;
-  color: #fff;
-  font-size: 16px;
-}
-
-#noBtn {
-  background: #555;
-  color: #fff;
-}
-
-/* CORAZONES */
-.big-heart {
-  position: fixed;
-  font-size: 60px;
-  animation: floatUp 4s linear forwards;
-  pointer-events: none;
-}
-
-@keyframes floatUp {
-  from {
-    transform: translateY(0) scale(1);
-    opacity: 1;
-  }
-  to {
-    transform: translateY(-120vh) scale(1.8);
-    opacity: 0;
-  }
+.mensaje{
+    position:fixed;
+    bottom:20px;
+    left:50%;
+    transform:translateX(-50%);
+    background:rgba(255,255,255,0.15);
+    backdrop-filter:blur(8px);
+    padding:15px;
+    border-radius:15px;
+    max-width:85%;
+    text-align:center;
+    color:white;
+    display:none;
+    font-size:16px;
 }
 </style>
 </head>
 
 <body>
 
-<!-- INTRO -->
-<div id="intro">
-  <h1>
-Para el amor de mi vida<br>
-la señorita Abipatitafea 💖<br>
-Pulga · Xiomara · Mi Princesa
-  </h1>
-  
-  <button id="startBtn">Empezar</button>
-</div>
-
-<!-- CARTA -->
-<div class="card" id="card" style="display:none">
-  <div class="decor-text top">
-    para el amor de mi vida · eres mi mundo · nunca me dejes · te amo
-  </div>
-  <div class="decor-text bottom">
-    te amo con mi alma · ojalá ser pirata para secuestrar este tesoro
-  </div>
-  <div class="decor-text left">
-    si Shrek pudo conquistar a la princesa, yo también tengo esperanza
-  </div>
-  <div class="decor-text right">
-    te amo · eres mi mundo · amor eterno
-  </div>
-
-  <div class="heart">💜</div>
-  <h2 id="text">¿Querés ser mi San Valentín?</h2>
-
-  <div class="buttons" id="buttons">
-    <button id="yesBtn">Sí, sí quiero 💖</button>
-    <button id="noBtn">No…</button>
-  </div>
-</div>
-
-<!-- AUDIO -->
-<audio id="song1" src="my_love_mine_all_mine.mp3"></audio>
-<audio id="song2" src="cafune_micro_tdh.mp3" loop></audio>
+<canvas id="c"></canvas>
+<div class="mensaje" id="mensaje"></div>
 
 <script>
-const intro = document.getElementById("intro");
-const startBtn = document.getElementById("startBtn");
-const card = document.getElementById("card");
+const canvas = document.getElementById("c");
+const ctx = canvas.getContext("2d");
 
-const yesBtn = document.getElementById("yesBtn");
-const noBtn = document.getElementById("noBtn");
-const text = document.getElementById("text");
-const buttons = document.getElementById("buttons");
-
-const song1 = document.getElementById("song1");
-const song2 = document.getElementById("song2");
-
-let yesScale = 1;
-let noScale = 1;
-
-startBtn.onclick = () => {
-  intro.style.display = "none";
-  card.style.display = "block";
-  song1.play();
-  setTimeout(() => {
-    song1.pause();
-    song2.play();
-  }, 15000);
-};
-
-const noQuestions = [
-  "¿Por qué no? 😔",
-  "¿Hice algo mal? 💔",
-  "¿Seguro que no? 🥺",
-  "Me estás rompiendo el corazón… 😢",
-  "Por favor… no me hagas llorar 😭",
-  "Ya estoy llorando de verdad… 💧"
-];
-
-let noIndex = 0;
-
-noBtn.onclick = () => {
-  text.innerHTML = noQuestions[noIndex];
-  noIndex++;
-
-  if (noIndex >= noQuestions.length) {
-    noBtn.innerHTML = "😭";
-    noBtn.style.fontSize = "28px";
-  }
-};
-
-yesBtn.onclick = () => {
-  text.innerHTML =
-    "Jajajaja, bueno sé que esto nunca ocurrirá y que solo es un acto de fingir que mis sueños se cumplan. Si apretaste sí y por ende estás leyendo esto, gracias: estás cumpliendo mi fantasía al menos por hoy. Siempre me hacés la persona más feliz del universo. Te amo con mi vida y espero que hoy no te sientas sola ni que no te amen, porque sin importar el día, la fecha, con quién estés o qué haya pasado, siempre serás el amor de mi vida y te amaré hasta morir 💜";
-  buttons.style.display = "none";
-  createBigHearts();
-};
-
-function createBigHearts() {
-  for (let i = 0; i < 35; i++) {
-    const heart = document.createElement("div");
-    heart.className = "big-heart";
-    heart.innerHTML = "💜";
-    heart.style.left = Math.random() * window.innerWidth + "px";
-    heart.style.bottom = "-60px";
-    document.body.appendChild(heart);
-    setTimeout(() => heart.remove(), 4000);
-  }
+function resize(){
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
 }
-</script>
+resize();
+window.addEventListener("resize", resize);
 
-</body>
-</html>
+let angle = 0;
+let rotation = 0;
+
+const mensajes = [
+"Te amo sin esperar nada a cambio.",
+"Me encanta tu noble sonrisa.",
+"Tus ojos parecen esmeraldas que me hechizan.",
+"Tu voz es mi melodía favorita.",
+"Te amo incluso en silencio.",
+"Tu cabello brilla como oro.",
+"Admiro cada parte de tu forma de ser.",
+"Te amo aunque sea solo mío.",
+"Tu risa ilumina mis días.",
+"Te amo con paciencia infinita.",
+"Tu presencia cambia mi mundo.",
+"Te amo sin presionarte.",
+"Cada gesto tuyo me enamora.",
+"Te amo incluso si no soy tu elección.",
+"Tu piel parece porcelana delicada.",
+"Eres el sentimiento más puro.",
+"Te amo profundamente.",
+"No espero respuesta, solo amarte.",
+"Tu mirada toca mi alma.",
+"Te amo con respeto absoluto.",
+"Tu esencia me inspira.",
+"Te amo en cada pensamiento.",
+"Tu forma de existir me fascina.",
+"Te amo sin prisas.",
+"Eres mi pensamiento favorito.",
+"Te amo desde la calma.",
+"Tu voz vive en mi memoria.",
+"Te amo porque existes.",
+"Si amar es verte feliz, te amo.",
+"Este amor es real aunqu
+  
