--- a/Index.html
+++ b/Index.html
@@ -4,159 +4,134 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Mi Universo</title>
+
 <style>
 body{
-    margin:0;
-    overflow:hidden;
-    background:#0b0033;
+  margin:0;
+  overflow:hidden;
+  font-family:Arial, sans-serif;
+  background: linear-gradient(-45deg, #3a0ca3, #4361ee, #7209b7, #f72585);
+  background-size:400% 400%;
+  animation: fondo 15s ease infinite;
 }
-canvas{
-    display:block;
+
+@keyframes fondo{
+  0%{background-position:0% 50%;}
+  50%{background-position:100% 50%;}
+  100%{background-position:0% 50%;}
 }
+
+.contenedor{
+  position:relative;
+  width:100vw;
+  height:100vh;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+}
+
+.nucleo{
+  width:120px;
+  height:120px;
+  border-radius:50%;
+  background: radial-gradient(circle, #fff, #ffd166, transparent);
+  position:absolute;
+  animation: latido 2s infinite;
+}
+
+@keyframes latido{
+  0%{transform:scale(1);}
+  50%{transform:scale(1.2);}
+  100%{transform:scale(1);}
+}
+
+.orbita{
+  position:absolute;
+  width:400px;
+  height:400px;
+  border-radius:50%;
+  animation: girar 20s linear infinite;
+}
+
+@keyframes girar{
+  from{transform:rotate(0deg);}
+  to{transform:rotate(360deg);}
+}
+
+.carta{
+  position:absolute;
+  font-size:28px;
+  cursor:pointer;
+}
+
 .mensaje{
-    position:fixed;
-    bottom:20px;
-    left:50%;
-    transform:translateX(-50%);
-    background:rgba(0,0,0,0.8);
-    color:white;
-    padding:15px;
-    border-radius:12px;
-    max-width:85%;
-    text-align:center;
-    font-size:16px;
-    display:none;
+  position:fixed;
+  bottom:20px;
+  left:50%;
+  transform:translateX(-50%);
+  background:rgba(0,0,0,0.8);
+  color:white;
+  padding:15px;
+  border-radius:10px;
+  max-width:85%;
+  text-align:center;
+  display:none;
 }
 </style>
 </head>
 <body>
 
-<canvas id="c"></canvas>
+<div class="contenedor">
+
+<div class="nucleo"></div>
+
+<div class="orbita" id="orbita"></div>
+
+</div>
+
 <div class="mensaje" id="mensaje"></div>
 
 <script>
-const canvas = document.getElementById("c");
-const ctx = canvas.getContext("2d");
-
-function resize(){
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
-}
-resize();
-window.addEventListener("resize", resize);
-
-let tiempo = 0;
-let formar = false;
-
-const mensajes = [
+const mensajes=[
 "Te amo sin esperar respuesta.",
-"Me encanta tu noble sonrisa.",
-"Tus ojos me hechizan profundamente.",
+"Me encanta tu sonrisa.",
+"Tus ojos me hechizan.",
 "Tu voz es mi canción favorita.",
-"Te amo incluso en silencio.",
-"Tu esencia ilumina mi mundo.",
-"Te amo sin presión.",
+"Te amo aunque solo viva en mí.",
 "Eres mi pensamiento favorito.",
 "Te amo profundamente.",
 "No espero nada, solo amarte.",
-"Tu risa es mi universo.",
+"Tu risa ilumina todo.",
 "Te amo sin condiciones.",
-"Tu presencia cambia todo.",
+"Tu presencia cambia mi mundo.",
 "Te amo sin prisas.",
-"Tu mirada toca mi alma.",
 "Eres inspiración constante.",
-"Te amo aunque este amor viva solo en mí."
+"Te amo aunque sea en silencio.",
+"Este amor es real aunque solo viva en mí.",
+"Me enamora tu forma de ser.",
+"Cada gesto tuyo me cautiva.",
+"Te amo con paciencia infinita.",
+"Eres mi luz.",
+"Te amo simplemente porque existes."
 ];
 
-let cartas = [];
-for(let i=0;i<35;i++){
-    cartas.push({
-        radio: 150 + Math.random()*200,
-        ang: Math.random()*Math.PI*2,
-        vel: 0.01 + Math.random()*0.01,
-        altura: (Math.random()-0.5)*150,
-        mensaje: mensajes[Math.floor(Math.random()*mensajes.length)]
-    });
+const orbita=document.getElementById("orbita");
+
+for(let i=0;i<30;i++){
+  let carta=document.createElement("div");
+  carta.className="carta";
+  carta.innerHTML="💌";
+  carta.style.top="0px";
+  carta.style.left="50%";
+  carta.style.transform=`rotate(${i*12}deg) translate(200px) rotate(-${i*12}deg)`;
+  carta.onclick=()=>{
+    let box=document.getElementById("mensaje");
+    box.innerText=mensajes[Math.floor(Math.random()*mensajes.length)];
+    box.style.display="block";
+    setTimeout(()=>box.style.display="none",4000);
+  };
+  orbita.appendChild(carta);
 }
-
-function proyectar(x,y,z){
-    let scale = 400/(400+z);
-    return {
-        x: x*scale + canvas.width/2,
-        y: y*scale + canvas.height/2,
-        s: scale
-    }
-}
-
-function drawFondo(){
-    let grad = ctx.createLinearGradient(0,0,0,canvas.height);
-    grad.addColorStop(0,"#3a0ca3");
-    grad.addColorStop(0.5,"#4361ee");
-    grad.addColorStop(1,"#f72585");
-    ctx.fillStyle = grad;
-    ctx.fillRect(0,0,canvas.width,canvas.height);
-}
-
-function draw(){
-    tiempo++;
-    drawFondo();
-
-    if(tiempo > 1000) formar = true;
-
-    // Núcleo brillante
-    let glow = 60 + Math.sin(tiempo*0.1)*20;
-    let g = ctx.createRadialGradient(
-        canvas.width/2, canvas.height/2, 0,
-        canvas.width/2, canvas.height/2, glow*3
-    );
-    g.addColorStop(0,"#ffffff");
-    g.addColorStop(0.3,"#ffd166");
-    g.addColorStop(1,"transparent");
-    ctx.fillStyle = g;
-    ctx.beginPath();
-    ctx.arc(canvas.width/2, canvas.height/2, glow*3, 0, Math.PI*2);
-    ctx.fill();
-
-    cartas.forEach((c,i)=>{
-        let x,y,z;
-
-        if(!formar){
-            c.ang += c.vel;
-            x = Math.cos(c.ang)*c.radio;
-            z = Math.sin(c.ang)*c.radio;
-            y = c.altura;
-        }else{
-            let t = i * 0.5;
-            x = 16*Math.pow(Math.sin(t),3)*8;
-            y = -(13*Math.cos(t)-5*Math.cos(2*t)-2*Math.cos(3*t)-Math.cos(4*t))*8;
-            z = 0;
-        }
-
-        let p = proyectar(x,y,z);
-        ctx.font = 30*p.s + "px Arial";
-        ctx.fillText("💌", p.x, p.y);
-
-        c.sx = p.x;
-        c.sy = p.y;
-        c.size = 30*p.s;
-    });
-
-    requestAnimationFrame(draw);
-}
-draw();
-
-canvas.addEventListener("click", e=>{
-    cartas.forEach(c=>{
-        let dx = e.clientX - c.sx;
-        let dy = e.clientY - c.sy;
-        if(Math.sqrt(dx*dx+dy*dy) < c.size){
-            let box = document.getElementById("mensaje");
-            box.innerText = c.mensaje;
-            box.style.display="block";
-            setTimeout(()=>box.style.display="none",4000);
-        }
-    });
-});
 </script>
 
 </body>
