--- a/Index.html
+++ b/Index.html
@@ -64,36 +64,35 @@ body{
 
 <script>
 const mensajes = [
-"Te amo en silencio.",
+"Te amo aunque tu no lo hagas.",
 "Te amo sin esperar nada.",
-"Eres lo más bonito que me pasó.",
+"Eres lo más importante en mi vida.",
 "Me encanta tu sonrisa.",
 "Tus ojos me hechizan.",
 "Te amo aunque solo viva en mí.",
 "Tu voz es mi melodía favorita.",
-"Eres mi pensamiento constante.",
-"Te amo con paciencia.",
-"Tu presencia ilumina mi mundo.",
-"Te amo sin condiciones.",
+"Eres en lo unico que pienso.",
+"Te amo en esta y en todas las vidas que tenga.",
+"Tu eres la luz que  ilumina mi mundo.",
+"Te amo de aquí hasta el fin de la eternidad.",
 "Me enamora tu forma de ser.",
-"Cada gesto tuyo me cautiva.",
+"Cada gesto tuyo me enamora mas.",
 "Te amo profundamente.",
-"Tu risa es mi alegría.",
-"Te amo aunque no lo sepas.",
-"Eres mi inspiración.",
-"Te amo más de lo que imaginas.",
-"Tu mirada me desarma.",
-"Te amo simplemente porque existes.",
-"Mi corazón late por ti.",
-"Eres mi sueño favorito.",
+"Tu risa es mi cancion favorita.",
+"Te amo aunque tu no a mi .",
+"Eres la razon de mi existencia.",
+"si supieras cuanto te amo pensarias que estoy loco.",
+"cada vez que me miras me siento en un sueño.",
+"Te amo con tanta locura que mataria por estar contigo.",
+"Mi corazón se vuelve loco al escucharte.",
+"Eres en lo único que pinso y con lo que sueño tener.",
 "Te amo con todo lo que soy.",
 "No espero respuesta, solo amarte.",
 "Eres mi estrella favorita.",
-"Te amo incluso en silencio.",
-"Tu esencia me enamora.",
+"Te amo incluso si amas a otro.",
+"Tus actos me enamoran mas.",
 "Te amo cada día más.",
-"Eres mi paz.",
-"Te amo… aunque solo viva en mí."
+"Eres mi mundo."
 ];
 
 const contenedor = document.getElementById("contenedor");
